--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>	
   <main>	
     <h1>4 Uno Rules You're Playing Wrong</h1>	
-    <center><img src="images/uno-cards.jpg" width = "150" alt="uno cards" />	</center>
+    <img src="images/uno-cards.jpg" width = "150" alt="uno cards" />
     <div class="introduction">	
       <p>The popular American card game Uno has simple rules, right?<br> WRONG!<br> 
         
